tekton/milvus-ci/4am/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tekton-4am.zilliz.cc
  rules:
    - host: tekton-4am.zilliz.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
